Fix RHWVChildFrame::CopyFromSurface

Currently this method earlies out and returns an empty SkBitmap if
OOP-D is enabled. It should just proceed the same way as the
non-OOP-D case.

Bug: 903453
Change-Id: I0943279e2d98885682f5b8d4e619413293575b5a
Reviewed-on: https://chromium-review.googlesource.com/c/1327418
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#606637}(cherry picked from commit 3eb474b21e4f69e77baea1df3726a4f45914c20e [formerly 8ac4b5e605f2b3920f38ebbd0c6b9735cbb83e50])
Reviewed-on: https://chromium-review.googlesource.com/c/1329445
Reviewed-by: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#612}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: 39243aecde5bd420b0982d8ab1abc8731b8c3b9c